Fix PR/37878 and PR/37550: Provide stat(2) for all devices and don't use fbadop_stat.